# 3D-Game

./: CMakeLists.txt
src/c/: main.c  player.c  polygon.c
src/include/: player.h  polygon.h
